jwt和请求参数调整 完善了jwt功能，将jwt token移至http请求头 将cluster和user模块的查询改成post方式，增加查询参数类型
